// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cashReceiptFormatGenerator matches snapshot 1`] = `
[
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "18px",
      "fontWeight": "700",
      "textAlign": "center",
    },
    "type": "text",
    "value": "Cash Receipt",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "16px",
      "fontWeight": "700",
      "marginBottom": "20px",
      "textAlign": "center",
    },
    "type": "text",
    "value": "CR-000001",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Name: Ashish Gupta",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Time: 10:30 AM",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "-------------------------------------",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Test Party Gandhi nagar - ₹1500",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "-----------------------------------",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "16px",
      "fontWeight": "bold",
      "marginBottom": "20px",
      "marginTop": "20px",
    },
    "type": "text",
    "value": "Total: ₹1500",
  },
  {
    "displayValue": false,
    "fontsize": 12,
    "height": 40,
    "type": "barCode",
    "value": "CR-000001",
    "width": 2,
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "10px",
      "marginTop": "10px",
      "textAlign": "center",
    },
    "type": "text",
    "value": "Created By: admin",
  },
]
`;

exports[`supplyReportFormatGenerator matches snapshot (isBundle=false) 1`] = `
[
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "18px",
      "fontWeight": "700",
      "textAlign": "center",
    },
    "type": "text",
    "value": "Supply Report",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "16px",
      "fontWeight": "700",
      "marginBottom": "20px",
      "textAlign": "center",
    },
    "type": "text",
    "value": "SR-000001",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Supplyman: Ramesh Kumar",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Dispatch Time: 9:00 AM",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Cases: 3, Polybags: 2, Packets: 5",
  },
  {
    "style": {
      "borderBottom": "1px solid #000",
      "margin": "5px",
    },
    "type": "text",
    "value": "",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Dispatch Notes: Handle carefully",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "Account Notes: Collect balance",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "14px",
      "fontWeight": "700",
      "marginBottom": "5px",
      "marginTop": "10px",
      "textAlign": "center",
    },
    "type": "text",
    "value": "Bills in hand",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
      "paddingTop": "5px",
    },
    "type": "text",
    "value": "Abc Medical (CONNAUGHT PLACE)",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
    },
    "type": "text",
    "value": "B-1001(₹2500)",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
      "fontWeight": "bold",
    },
    "type": "text",
    "value": "Case-1  ,Packet-2  ",
  },
  {
    "style": {
      "borderBottom": "1px solid #000",
      "paddingBottom": "5px",
    },
    "type": "text",
    "value": "",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "14px",
      "fontWeight": "700",
      "marginBottom": "5px",
      "marginTop": "10px",
      "textAlign": "center",
    },
    "type": "text",
    "value": "Old Bills in hand",
  },
  {
    "style": {
      "fontFamily": "Arial",
      "fontSize": "12px",
      "marginTop": "20px",
    },
    "type": "text",
    "value": "",
  },
  {
    "displayValue": false,
    "fontsize": 12,
    "height": 40,
    "type": "barCode",
    "value": "SR-000001",
    "width": 2,
  },
]
`;
